# creature-ai-engine

./: CMakeLists.txt
src/: AssistantConfig.h  main.cpp
